--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
   release-please:
     name: Release Automation
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
