fix: Configure release-please to use main as primary branch and changelog path

--- a/release/release-please-config.json
+++ b/release/release-please-config.json
@@ -2,6 +2,8 @@
   "packages": {
     ".": {
       "release-type": "go",
+      "primary-branch": "main",
+      "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
