fix: Set Homebrew formula directory in GoReleaser

--- a/release/.goreleaser.yml
+++ b/release/.goreleaser.yml
@@ -149,6 +149,7 @@ brews:
       owner: jsmenzies
       name: homebrew-fresh
       token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
+    directory: Formula
     commit_author:
       name: James Menzies
       email: bot@goreleaser.com
