--- a/release/.goreleaser.yml
+++ b/release/.goreleaser.yml
@@ -40,7 +40,7 @@ builds:
       - -X main.version={{.Version}}
       - -X main.commit={{.Commit}}
       - -X main.date={{.Date}}
-      - -X main.builtBy=goreleaser
+      - -X main.builtBy=James Menzies
 
     env:
       - CGO_ENABLED=0
@@ -55,11 +55,6 @@ archives:
       {{- .Os }}_
       {{- .Arch }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
-
-    # Files to include in archive
-    files:
-      - README.md
-      - LICENSE*
 
 checksum:
   # Generate checksums file
@@ -152,7 +147,7 @@ brews:
     directory: Formula
     commit_author:
       name: James Menzies
-      email: bot@goreleaser.com
+      email: jsmenzies@users.noreply.github.com
     description: "Git repository management CLI tool"
     homepage: "https://github.com/jsmenzies/fresh"
     license: "MIT"
