fix(goreleaser): correct ldflags format and use dynamic builtBy
This commit fixes the GoReleaser build failure by correcting the
ldflags format to be a single string. It also updates the 'builtBy'
field to be dynamically set using an environment variable from the
GitHub Actions workflow, which holds the commit author's name.

--- a/release/.goreleaser.yml
+++ b/release/.goreleaser.yml
@@ -33,14 +33,12 @@ builds:
     flags:
       - -trimpath
 
-    ldflags:
-      # Inject version information at build time
-      # -s -w strips debug information to reduce binary size
-      - -s -w
-      - -X main.version={{.Version}}
-      - -X main.commit={{.Commit}}
-      - -X main.date={{.Date}}
-      - -X main.builtBy=James Menzies
+    ldflags: >-
+      -s -w
+      -X main.version={{.Version}}
+      -X main.commit={{.Commit}}
+      -X main.date={{.Date}}
+      -X 'main.builtBy={{ .Env.BUILT_BY }}'
 
     env:
       - CGO_ENABLED=0
