--- a/release/.goreleaser.yml
+++ b/release/.goreleaser.yml
@@ -136,21 +136,25 @@ release:
 
     **Full Changelog**: https://github.com/{{ .Env.GITHUB_REPOSITORY_OWNER }}/fresh/compare/{{ .PreviousTag }}...{{.Tag}}
 
-brews:
+homebrew_casks:
   - name: fresh
     repository:
       owner: jsmenzies
-      name: homebrew-fresh
+      name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
-    directory: Formula
     commit_author:
       name: James Menzies
       email: jsmenzies@users.noreply.github.com
     description: "A CLI tool for interactively managing the status of multiple Git repositories"
     homepage: "https://github.com/jsmenzies/fresh"
-    license: "MIT"
-    install: |
-      bin.install "fresh"
+    binaries:
+      - fresh
+    hooks:
+      post:
+        install: |
+          if OS.mac?
+            system_command "/usr/bin/xattr", args: ["-dr", "com.apple.quarantine", "#{staged_path}/fresh"]
+          end
 
 scoops:
   - repository:
